src/main/java/com/example/timetable/error/ErrorCode.java
package com.example.timetable.error;

public enum ErrorCode {
    OBJECT_NOT_FOUND,
    TRIP_NOT_FOUND,
    PASSENGER_ALREADY_REGISTERED,
    ALL_SEATS_BOUGHT,

    VALIDATION_ERROR
}
